welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:17: error: not found: value c
   	if (getCouleurSol==c) {
                           ^